# proman-workflows

./: .bumpversion.cfg  .flake8  .git-hooks.yaml  404.html  CHANGELOG.md  LICENSE  README.md  cli.py  gilt.yml  index.html  mkdocs.yml  pyproject.toml  pytest.ini  tasks.py  tox.ini  workflow.yaml
.github/: dependabot.yml
.github/workflows/: darwin-quality-assurance.yml  docs.yml  linux-quality-assurance.yml  windows-quality-assurance.yml
convential_commits_parser/: __init__.py
examples/: branch.py  bumpver.toml  check.py  conventional_commit.py  conventional_commit.py.bak  flow.py  flow.py.bak  letter.py  local.py  pyproject.toml  repo.py  vers.py  vers.py.bak
examples/mock_workflow/: __init__.py  __main__.py
examples/mock_workflow/mock/: __init__.py  original.py  update.py
examples/workflows/: proman.yml
git_tools/: __init__.py  __main__.py  __version__.py  config.py  hooks.py  message.py  submodule.py
git_tools/cli/: config.py  hooks.py  message.py  setup.py
git_tools/grammars/: conventional_commits.lark
git_tools/templates/: gitmessage.j2  hook_template.py.j2
integration/: conftest.py
integration/pki/: test_gpg.py
proman_workflows/: __init__.py  __main__.py  check.py  collection.py  config.py  controller.py  conventional_commits.py  exception.py  filesystem.py  hooks.py  init.py  parser.py  precommit.py  release.py  releases.py  runner.py  setup.py  stlc.py  submodule.py  tools.py  utils.py  vcs.py  version.py  workflow.py
proman_workflows/cli/: __init__.py  hooks.py  hooks.py.bak  message.py  release.py  setup.py  submodule.py
proman_workflows/container/: __init__.py  compose.py  docker.py  podman.py
proman_workflows/container/docker/: compose.py
proman_workflows/container/podman/: podman.py
proman_workflows/docs/: __init__.py  mkdocs.py  sphinx.py
proman_workflows/executable/: __init__.py  briefcase.py  pyinstaller.py
proman_workflows/flask/: validate.py  webapp.py
proman_workflows/formatter/: __init__.py  autopep8.py
proman_workflows/git/: __init__.py  config.py  hooks.py  schema.py  submodule.py  submodule.py.bak
proman_workflows/grammars/: conventional_commits.lark
proman_workflows/infra/: ansible.py
proman_workflows/mock/: __init__.py  check.py
proman_workflows/package/: __init__.py  __init__.py.bak  flit.py  poetry.py  twine.py
proman_workflows/pki/: __init__.py  gpg.py  tls.py
proman_workflows/qa/: __init__.py  black.py  flake8.py  isort.py  mypy.py  pytest.py  safety.py  test_infra.py.bak
proman_workflows/qa/sca/: bandit.py  safety.py
proman_workflows/sca/: __init__.py  mypy.py
proman_workflows/sca/security/: __init__.py  bandit.py  safety.py
proman_workflows/security/: __init__.py  bandit.py  safety.py
proman_workflows/templates/: __init__.py  gitconfig.j2  githooks.j2  invoke_hooks.j2  invoke_template.py.j2  pypr_hooks.j2
proman_workflows/web/: __init__.py  gunicorn.py  service.py
protools/: __init__.py  init.py  utils.py
protools/container/: __init__.py
protools/docs/: __init__.py
protools/executable/: __init__.py
protools/git/: hooks.py
protools/package/: __init__.py  setuptools.py
protools/pki/: __init__.py  gpg.py  tls.py
protools/qa/: __init__.py  autopep8.py  mypy.py  pytest.py
protools/security/: __init__.py
protools/web/: npm.py
src/proman_workflows/: __init__.py  __main__.py  collection.py  config.py  filesystem.py  runner.py  setup.py  stlc.py  tools.py
src/proman_workflows/container/: __init__.py
src/proman_workflows/docs/: __init__.py
src/proman_workflows/executable/: __init__.py  briefcase.py  pyinstaller.py
src/proman_workflows/formatter/: isort.py
src/proman_workflows/infra/: __init__.py  test_infra.py
src/proman_workflows/pki/: __init__.py
src/proman_workflows/qa/: __init__.py  behave.py  behave.py.bak
src/proman_workflows/sca/: __init__.py  flake8.py
src/workflows/: __init__.py  __main__.py  collection.py  config.py  exception.py  filesystem.py  init.py  runner.py  setup.py  stlc.py  tools.py  utils.py
src/workflows/container/: __init__.py  docker.py  podman.py
src/workflows/docs/: __init__.py  mkdocs.py  sphinx.py
src/workflows/executable/: __init__.py  briefcase.py  pyinstaller.py
src/workflows/formatter/: __init__.py  autopep8.py  black.py  isort.py
src/workflows/git/: __init__.py  hooks.py  submodule.py.bak
src/workflows/package/: __init__.py  flit.py  poetry.py  setuptools.py  twine.py
src/workflows/pki/: __init__.py  gpg.py  tls.py
src/workflows/qa/: __init__.py  behave.py  pytest.py
src/workflows/sca/: __init__.py  flake8.py  mypy.py
src/workflows/sca/security/: __init__.py  bandit.py  safety.py
src/workflows/system/: __init__.py  ansible.py  test_infra.py
src/workflows/templates/: githooks.j2  invoke_hooks.j2  pypr_hooks.j2
src/workflows/web/: __init__.py  gunicorn.py  npm.py  service.py  validate.py
tasks/: __init__.py  build.py  doc.py  qa.py
tests/: test_config.py  test_hooks.py  test_version.py
tests/grammars/: test_body.py  test_footer.py  test_title.py
tests/hooks/: .git-hooks.yaml
tests/message/: test_body.py  test_footer.py  test_title.py
tests/parser/: test_body.py  test_footer.py  test_title.py
tests/pki/: test_gpg.py
tests/version/: test_python_version.py
